# vscode-catkin-tools

./: .dockerignore  .gitignore  .gitmodules  .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tslint.json
.github/workflows/: ci.yaml  release.yaml
docker/config/: dbus-system.conf
docker/test/: catkin_tools.docker  headless.docker  test_entrypoint.sh  ubuntu-20.04.docker  (+1 more)
src/: catkin_build.ts  catkin_cmake_parser.ts  catkin_command.ts  catkin_package.ts  catkin_test_adapter.ts  catkin_test_parameters.ts  catkin_test_types.ts  catkin_tools.ts  catkin_tools_provider.ts  catkin_workspace.ts  compiler_problem_matcher.ts  cpp_configuration_provider.ts  extension.ts  gtest_problem_matcher.ts  internal_api.ts  package_xml_tools.ts  utils.ts  workspace_manager.ts
tests/workspaces/test_types/catkin_add_gtest/src/package_with_dynamic_library/: CMakeLists.txt  package.xml
tests/workspaces/test_types/catkin_add_gtest/src/package_with_dynamic_library/include/: library.h
tests/workspaces/test_types/catkin_add_gtest/src/package_with_dynamic_library/src/: library.cpp
tests/workspaces/test_types/catkin_add_gtest/src/package_with_dynamic_library/test/: test.cpp
tests/workspaces/test_types/catkin_add_gtest/src/package_with_gtests/: CMakeLists.txt  package.xml
tests/workspaces/test_types/catkin_add_gtest/src/package_with_gtests/test/: test.cpp  test_f.cpp  test_p.cpp  test_package_a.cpp  test_typed_test.cpp  test_typed_test_p.cpp  test_typed_test_p_with_param.cpp  test_typed_test_with_colon.cpp  test_typed_test_with_mapping.cpp
(+74 files in other folders)
